--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,26 +6,23 @@ services:
     build:
       context: ./backend
     ports:
-      - '8001:8001'
+      - '7001:7001'
     environment:
       - NODE_ENV=production
-      - FRONTEND_ORIGIN=http://localhost:8000
-      - PORT=8001
+      - FRONTEND_ORIGIN=https://7000--main--cuong--cuong-admin.coder1.hirogo-dev.com
+      - PORT=7001
     volumes:
-      - db-data:/app/database
+      - ./db-data:/app/database
 
   frontend:
     image: unittcms-frontend:latest
     build:
       context: ./frontend
     ports:
-      - '8000:8000'
+      - '7000:7000'
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_BACKEND_ORIGIN=http://localhost:8001
-      - PORT=8000
+      - NEXT_PUBLIC_BACKEND_ORIGIN=https://7001--main--cuong--cuong-admin.coder1.hirogo-dev.com
+      - PORT=7000
     depends_on:
       - backend
-
-volumes:
-  db-data:
