--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
